<resources>
    <string name="app_name">StepMaster</string>
    <string name="fitness_stepper">Step Master</string>
    <string name="author">Dawid Pajor</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="already_have_an_account_log_in">Already have an account?</string>
    <string name="today">Today</string>
    <string name="settings">Settings</string>
    <string name="steps">Steps</string>
    <string name="hello">Hello!</string>
    <string name="search">Search</string>
    <string name="distance_traveled">Distance Traveled</string>
    <string name="calories">Calories</string>
    <string name="logout">Logout</string>
    <string name="check_activity">Check Activity</string>
</resources>