<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:id="@+id/imageHeader"
        android:src="@drawable/header_register"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/header_layer"
        app:layout_constraintBottom_toBottomOf="@id/imageHeader"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageHeader"
        android:layout_marginStart="18dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fitness_stepper"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textSize="20sp"
            android:includeFontPadding="false"
            android:textColor="@color/white"/>
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:id="@+id/viewSupporter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageHeader"
        android:layout_marginBottom="30dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/viewSupporter"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:background="@drawable/login_background">

        <TextView
            android:id="@+id/textCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputEmail"
            app:layout_constraintTop_toBottomOf="@id/textCreateAccount"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:hint="@string/email"
            android:textColorHint="@color/layerSemiGray"
            android:textColor="@color/black"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingStart="60dp"
            android:paddingEnd="10dp"
            android:textSize="15sp"
            tools:ignore="Autofill"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/EmailDivider"
            android:background="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/inputEmail"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/baseline_email_24"
            app:tint="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/inputEmail"
            app:layout_constraintStart_toStartOf="@id/inputEmail"
            android:layout_marginStart="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputPassword"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/EmailDivider"
            android:background="@null"
            android:hint="@string/password"
            android:textColorHint="@color/layerSemiGray"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="60dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="Autofill"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/PasswordDivider"
            android:background="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/inputPassword"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/baseline_password_24"
            app:tint="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/inputPassword"
            app:layout_constraintStart_toStartOf="@id/inputPassword"
            android:layout_marginStart="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputPasswordRepeat"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/PasswordDivider"
            android:background="@null"
            android:hint="@string/repeat_password"
            android:textColorHint="@color/layerSemiGray"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="60dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="Autofill"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/PasswordRepeatDivider"
            android:background="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/inputPasswordRepeat"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/baseline_password_24"
            app:tint="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/inputPasswordRepeat"
            app:layout_constraintStart_toStartOf="@id/inputPasswordRepeat"
            android:layout_marginStart="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/PasswordRepeatDivider"
            android:background="@drawable/button_background"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="13sp"
            android:textAllCaps="false"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/forgotPassword"
            app:layout_constraintTop_toBottomOf="@id/createAccountButton"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/already_have_an_account_log_in"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="13sp"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>