<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/navy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calendar">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:backgroundTint="@color/white"
        android:id="@+id/bottomPanel"
        app:menu="@menu/menu_bottom_navigation"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/bottomPanel"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/background"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="centerCrop"
                android:id="@+id/backgroundImage"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#90000000"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/backgroundImage"
                />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/outline_menu_24"
                android:contentDescription="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/imageMenu"
                android:background="@drawable/menu_background"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/textHello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/imageMenu"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/hello"
                android:layout_marginStart="20dp"
                android:textSize="23sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp"
                android:background="@drawable/search_background"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/textHello">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_search"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    tools:ignore="Autofill"
                    android:hint="@string/search"
                    android:textSize="18sp"
                    android:textColorHint="@color/layerSemiGray"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:id="@+id/viewSupport"
                android:layout_marginBottom="50dp"
                app:layout_constraintBottom_toBottomOf="@+id/backgroundImage"
                app:layout_constraintStart_toStartOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>